--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -199,8 +199,10 @@ img {
   height: 0;
   border-radius: 50%;
   background-color: #1d1d1d;
-  -webkit-transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
-  transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
+  -webkit-transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: -1;
@@ -2096,8 +2098,10 @@ Delivery Area CSS
   height: 0;
   border-radius: 50%;
   background-color: #fbb403;
-  -webkit-transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
-  transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
+  -webkit-transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: -1;
@@ -2829,8 +2833,10 @@ Services Area CSS
   height: 0;
   border-radius: 50%;
   background-color: #fbb403;
-  -webkit-transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
-  transition: width 0.5s ease-in-out,  height 0.5s ease-in-out;
+  -webkit-transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out, 
+ height 0.5s ease-in-out;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: -1;
@@ -3281,7 +3287,7 @@ Subscribe Area CSS
 }
 
 .subscribe-area .newsletter-form #validator-newsletter {
-  color: red;
+  color: green;
   position: relative;
   top: 8px;
   font-size: 16px;
